--- a/requirements.txt
+++ b/requirements.txt
@@ -12,14 +12,19 @@ whitenoise==6.6.0
 django-admin-interface==0.28.6
 django-colorfield==0.11.0
 
-# Environment variables (optional but recommended)
-django-environ==0.12.0
-
-# Database (SQLite works by default, but psycopg2 is harmless if you migrate later)
-psycopg2-binary==2.9.10
-
-# Optional utilities
-requests==2.32.3
-
+# Django REST Framework
 djangorestframework==3.16.1
 django-filter==25.1
+
+# QR codes
+qrcode==7.4.2
+Pillow==10.4.0
+
+# Environment variables (optional)
+django-environ==0.12.0
+
+# Database (optional for future PostgreSQL)
+psycopg2-binary==2.9.10
+
+# Utilities
+requests==2.32.3
